Buttons and favicon are added.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>2048</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
     <script src="./app.js" defer></script>
   </head>
   <body>
@@ -38,6 +39,20 @@
         </div>
       </div>
       <section id="grid"></section>
+      <div class="keyboard">
+        <button id="up-btn">
+          <img src="./images/arrow.png" alt="Arrow" />
+        </button>
+        <button id="left-btn">
+          <img src="./images/arrow.png" alt="Arrow" />
+        </button>
+        <button id="down-btn">
+          <img src="./images/arrow.png" alt="Arrow" />
+        </button>
+        <button id="right-btn">
+          <img src="./images/arrow.png" alt="Arrow" />
+        </button>
+      </div>
     </main>
   </body>
 </html>
